Fixed THe LocationHandler to work with json properly

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,11 @@ name: BetterKitPvP
 version: 0.0.1
 author: TryDev07
 website: https://github.com/TryDev07
+
+commands:
+  setspawn:
+    description: set the spawn for the server
+  AddRandomSpawn:
+    description: add a random spawnpoint
+  help:
+    description: help command
