--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -1,2 +1,4 @@
 AddRandomSpawnPoint: "&8[&eBetterKitPvP&8] &7- &fSuccefully added SpawnPoint %NAME%."
+RandomSpawnPointName: "&8[&eBetterKitPvP&8] &7- &fYou have to add a name to the RandomSpawnPoint."
 SpawnPoint: "&8[&eBetterKitPvP&8] &7- &fSuccefully set SpawnPoint."
+NoPermission: "&8[&eBetterKitPvP&8] &7- &fYou do not have the %PERMISSION% for this command"
