--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,5 @@ commands:
     description: help command
   Portal:
     description: Create/Delete a portal
+  shop:
+    description: set/remove shop
