--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -10,3 +10,5 @@ WaterFlow: "&8[&eBetterKitPvP&8] &7- &fYou have set the WaterFlow to %BOOLEAN%"
 ShopCreate: "&8[&eBetterKitPvP&8] &7- &fSuccefully created the shop."
 ShopRemove: "&8[&eBetterKitPvP&8] &7- &fSuccefully removed the shop."
 ShopDoesNotExists: "&8[&eBetterKitPvP&8] &7- &fYou have to create the shop first"
+SelectorCreate: "&8[&eBetterKitPvP&8] &7- &fSuccefully created the shop."
+SelectorRemove: "&8[&eBetterKitPvP&8] &7- &fSuccefully removed the shop."
