Added PlayerHandler.java and KitCommand.java

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,5 @@ commands:
     description: set/remove shop
   selector:
     description: set/remove selector
+  Kits:
+    description: base kit command
